--- a/news.html
+++ b/news.html
@@ -1,69 +1,68 @@
 <!doctype html>
-<html lang="ar" dir="rtl" data-theme="light">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>الأخبار – مجلس طلاب خطوة</title>
-  <meta name="description" content="آخر أخبار مجلس طلاب خطوة: إعلانات، فعاليات، وشراكات."/>
-  <meta name="theme-color" content="#1e40af"/>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>الأخبار – Khotwa</title>
   <style>
-    :root{--primary:#1e40af;--primary-600:#1d4ed8;--bg:#fff;--text:#0f172a;--muted:#6b7280;--ring:#e5e7eb;--card:#f8fafc}
-    *{box-sizing:border-box}html,body{height:100%}body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;background:var(--bg);color:var(--text);line-height:1.6}
-    a{color:inherit;text-decoration:none}img{max-width:100%;height:auto;display:block}.container{width:min(1120px,92%);margin-inline:auto}
-    .navbar{position:sticky;top:0;z-index:40;background:rgba(255,255,255,.85);backdrop-filter:saturate(180%) blur(8px);border-bottom:1px solid var(--ring)}
-    .nav-inner{display:flex;align-items:center;justify-content:space-between;padding:.8rem 0}
-    .nav-links{display:flex;gap:1rem;align-items:center}.nav-links a{padding:.5rem .75rem;border-radius:10px;font-weight:600}.nav-links a:hover{background:var(--card)}
-    .nav-cta{padding:.55rem .9rem;border-radius:12px;background:#1e40af;color:#fff!important}
-    .menu-toggle{display:none;border:1px solid var(--ring);padding:.5rem .7rem;border-radius:10px;background:#fff}
-    @media(max-width:860px){.menu-toggle{display:inline-flex}.nav-links{display:none;position:absolute;right:4%;left:4%;top:64px;flex-direction:column;padding:.75rem;background:#fff;border:1px solid var(--ring);border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.06)}.nav-links.open{display:flex}.nav-links a{width:100%}}
-    header.hero{background:linear-gradient(180deg,#ffffff 0%,#f5f7ff 100%);border-bottom:1px solid var(--ring)}.hero-inner{padding:2.6rem 0}
-    .hero h1{margin:0 0 .4rem;font-size:clamp(1.5rem,2vw + 1rem,2.2rem)}.muted{color:var(--muted)}
+    :root{--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
+    *{box-sizing:border-box}body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text)}
+    .container{width:min(1120px,92%);margin-inline:auto}
+    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring)}
+    .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
+    .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
+    .brand .logo{width:28px;height:28px;object-fit:cover;border-radius:6px}
+    .nav-links{display:flex;gap:1rem}.nav-links a{padding:.5rem .75rem;border-radius:10px}.nav-links a:hover{background:var(--card)}
     section{padding:2rem 0}.grid{display:grid;gap:1rem}.grid-3{grid-template-columns:repeat(3,1fr)}@media(max-width:980px){.grid-3{grid-template-columns:1fr}}
-    .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem;display:grid;gap:.6rem}.chip{display:inline-block;font-size:.78rem;padding:.25rem .55rem;border-radius:999px;background:var(--card);border:1px solid var(--ring)}
-    footer{border-top:1px solid var(--ring);background:#fff}.foot{display:grid;grid-template-columns:1.2fr 1fr;gap:1rem;padding:1.4rem 0}@media(max-width:860px){.foot{grid-template-columns:1fr}}
+    .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
+    .muted{color:var(--muted)}
+    footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   </style>
 </head>
 <body>
-  <nav class="navbar" aria-label="الشريط العلوي">
+  <nav class="navbar">
     <div class="container nav-inner">
-      <a class="brand" href="/index.html">مجلس طلاب خطوة – La Trobe</a>
-      <button id="menuBtn" class="menu-toggle" aria-expanded="false" aria-controls="primary-menu">القائمة</button>
-      <div id="primary-menu" class="nav-links" role="menubar">
-        <a href="/about.html" role="menuitem">من نحن</a>
-        <a href="/news.html" aria-current="page" role="menuitem">الأخبار</a>
-        <a href="/events.html" role="menuitem">الفعاليات</a>
-        <a href="/contact.html" role="menuitem">تواصل</a>
-        <a href="/index.html#join" class="nav-cta" role="menuitem">انضم للمجلس</a>
+      <a class="brand" href="/index.html">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="28" height="28">
+        <span>مجلس طلاب خطوة – La Trobe</span>
+      </a>
+      <div class="nav-links">
+        <a href="/about.html">من نحن</a>
+        <a href="/news.html">الأخبار</a>
+        <a href="/events.html">الفعاليات</a>
+        <a href="/calendar.html">التقويم</a>
+        <a href="/contact.html">تواصل</a>
       </div>
     </div>
   </nav>
 
-  <header class="hero">
-    <div class="container hero-inner"><h1>الأخبار</h1><p class="muted">آخر المستجدات والإعلانات.</p></div>
-  </header>
-
-  <main>
-    <section aria-label="قائمة الأخبار">
-      <div class="container">
-        <div class="grid grid-3">
-          <article class="card"><span class="chip">إعلان</span><h3>فتح باب الانضمام</h3><p class="muted">انضم للفِرق التنظيمية والفعاليات القادمة.</p><a class="muted" href="/contact.html">تواصل للاستفسار →</a></article>
-          <article class="card"><span class="chip">فعاليات</span><h3>ملتقى تعريفي</h3><p class="muted">لقاء وخطة الفصل وفقرة أسئلة وأجوبة.</p><a class="muted" href="/events.html">تفاصيل →</a></article>
-          <article class="card"><span class="chip">شراكات</span><h3>تعاونات أكاديمية</h3><p class="muted">ورش وأنشطة نوعية.</p><a class="muted" href="/events.html">الورش القادمة →</a></article>
-        </div>
+  <main class="container">
+    <section>
+      <h1>الأخبار</h1>
+      <div class="grid grid-3">
+        <article class="card">
+          <h3>فتح باب الانضمام</h3>
+          <p class="muted">استقبال طلبات العضوية للفصل القادم.</p>
+          <a href="/contact.html">قدّم الآن</a>
+        </article>
+        <article class="card">
+          <h3>تعاون جديد</h3>
+          <p class="muted">شراكة مع جهة أكاديمية لتقديم ورش متخصصة.</p>
+        </article>
+        <article class="card">
+          <h3>ملف الصور</h3>
+          <p class="muted">رفعنا لقطات من آخر ملتقى تعريفي.</p>
+        </article>
       </div>
     </section>
   </main>
 
-  <footer aria-label="تذييل الموقع">
-    <div class="container foot">
-      <div><strong>مجلس طلاب خطوة – La Trobe</strong><p class="muted" style="margin:.4rem 0 0">© <span id="year"></span> جميع الحقوق محفوظة</p></div>
-      <div class="muted" style="align-self:end;text-align:end">بريد: khotwaaustralia@gmail.com</div>
+  <footer>
+    <div class="container" style="display:flex;justify-content:space-between;gap:1rem;align-items:center">
+      <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
     </div>
   </footer>
-
-  <script>
-    const btn=document.getElementById('menuBtn'),menu=document.getElementById('primary-menu');
-    btn?.addEventListener('click',()=>{const o=menu.classList.toggle('open');btn.setAttribute('aria-expanded',String(o));});
-    document.getElementById('year').textContent=new Date().getFullYear();
-  </script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
